update mod configs and remove unused files

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -15,10 +15,11 @@ Create: Enchantment Industry
 Create: Framed
 Create: Power Loader
 Create: Trading Floor
-FTB Quests
 Farmer's Delight
 Gravestone Mod
 Handcrafted
 Rechiseled
 Rechiseled: Create
 create: things and misc
+Create Crafts & Additions
+Immersive Engineering
