--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -100,7 +100,13 @@ create_things_and_misc\:announcement_sound=true
 create_things_and_misc\:klaxon=true
 create_things_and_misc\:netherite_whistle=true
 create_things_and_misc\:portable_whistle=true
+createaddition\:electric_charge=true
+createaddition\:electric_motor_buzz=true
+createaddition\:little_zap=true
+createaddition\:loud_zap=true
+createaddition\:tesla_coil=true
 createcasing\:mldeg=true
+cucumber\:watering_can=true
 farmersdelight\:block.cabinet.close=true
 farmersdelight\:block.cabinet.open=true
 farmersdelight\:block.cooking_pot.boil=true
@@ -117,6 +123,47 @@ farmersdelight\:item.skillet.attack.weak=true
 flightlib\:whoosh=true
 handcrafted\:hammer_stone=true
 handcrafted\:hammer_wood=true
+immersiveengineering\:arc_furnace=true
+immersiveengineering\:assembler=true
+immersiveengineering\:birthday_party=true
+immersiveengineering\:bottling=true
+immersiveengineering\:buzzer=true
+immersiveengineering\:charge_fast=true
+immersiveengineering\:charge_slow=true
+immersiveengineering\:chute=true
+immersiveengineering\:crusher=true
+immersiveengineering\:diesel_generator=true
+immersiveengineering\:dire_switch=true
+immersiveengineering\:electromagnet=true
+immersiveengineering\:fermenter=true
+immersiveengineering\:glider=true
+immersiveengineering\:klaxon=true
+immersiveengineering\:metal_press_piston=true
+immersiveengineering\:metal_press_smash=true
+immersiveengineering\:mill_creaking=true
+immersiveengineering\:mixer=true
+immersiveengineering\:note_block_resonanz=true
+immersiveengineering\:ore_conveyor=true
+immersiveengineering\:ore_dump=true
+immersiveengineering\:preheater=true
+immersiveengineering\:process_1=true
+immersiveengineering\:process_1_lift=true
+immersiveengineering\:process_2=true
+immersiveengineering\:process_2_lift=true
+immersiveengineering\:railgun_fire=true
+immersiveengineering\:refinery=true
+immersiveengineering\:revolver_fire=true
+immersiveengineering\:revolver_fire_thump=true
+immersiveengineering\:revolver_reload=true
+immersiveengineering\:saw_empty=true
+immersiveengineering\:saw_full=true
+immersiveengineering\:saw_shutdown=true
+immersiveengineering\:saw_startup=true
+immersiveengineering\:siren=true
+immersiveengineering\:spark=true
+immersiveengineering\:spray=true
+immersiveengineering\:spray_fire=true
+immersiveengineering\:tesla=true
 minecraft\:ambient.basalt_deltas.additions=true
 minecraft\:ambient.basalt_deltas.loop=true
 minecraft\:ambient.basalt_deltas.mood=true
