--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -45,3 +45,26 @@ farmersdelight:cutting
 farmersdelight:decomposition
 rechiseled:chiseling
 trading_floor:potential_villager_trade
+createaddition:charging
+createaddition:liquid_burning
+createaddition:rolling
+immersiveengineering:alloy
+immersiveengineering:arc_furnace
+immersiveengineering:arc_recycling
+immersiveengineering:blast_furnace
+immersiveengineering:blast_furnace_fuel
+immersiveengineering:blueprint
+immersiveengineering:bottling_buckets
+immersiveengineering:bottling_machine
+immersiveengineering:bottling_potions
+immersiveengineering:cloche
+immersiveengineering:coke_oven
+immersiveengineering:crusher
+immersiveengineering:fermenter
+immersiveengineering:fertilizer
+immersiveengineering:metal_press
+immersiveengineering:mixer
+immersiveengineering:mixer_potions
+immersiveengineering:refinery
+immersiveengineering:sawmill
+immersiveengineering:squeezer
